--- a/front/src/styles/globals.css
+++ b/front/src/styles/globals.css
@@ -2,7 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono', 'Roboto Mono',
@@ -101,4 +110,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
